[gd_scene load_steps=10 format=3 uid="uid://cvpu5rrhb7ehv"]

[ext_resource type="Script" path="res://Scripts/factory_counter.gd" id="1_f452t"]
[ext_resource type="Resource" uid="uid://btbmbtexp3hb1" path="res://Factories/MetalSmeltery.tres" id="2_2ei53"]
[ext_resource type="PackedScene" uid="uid://cgdoipj6x5udp" path="res://Scenes/factory_icon.tscn" id="4_nkejt"]
[ext_resource type="PackedScene" uid="uid://n01k6less0tr" path="res://Scenes/factory_label.tscn" id="4_ojxxd"]
[ext_resource type="Texture2D" uid="uid://cdvjgy205c3sn" path="res://Sprites/PlaceholderWrench0.png" id="5_l4dhc"]
[ext_resource type="Texture2D" uid="uid://5x2fj26kbmrv" path="res://Sprites/PlaceholderWrench1.png" id="6_muqsl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cii6y"]
bg_color = Color(0.6, 0.6, 0.6, 0.270588)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iw4a4"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="AnimatedTexture" id="AnimatedTexture_lxcyl"]
frames = 2
pause = true
frame_0/texture = ExtResource("5_l4dhc")
frame_0/duration = 0.1
frame_1/texture = ExtResource("6_muqsl")
frame_1/duration = 0.1

[node name="FactoryCounter" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 48.0
offset_top = 178.0
offset_right = 124.0
offset_bottom = 234.0
script = ExtResource("1_f452t")
represented_factory = ExtResource("2_2ei53")

[node name="IconBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.0
offset_top = -8.0
offset_right = 38.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4
alignment = 1

[node name="FactoryIcon2" parent="IconBox" instance=ExtResource("4_nkejt")]
layout_mode = 2

[node name="FactoryIcon3" parent="IconBox" instance=ExtResource("4_nkejt")]
layout_mode = 2

[node name="FactoryIcon4" parent="IconBox" instance=ExtResource("4_nkejt")]
layout_mode = 2

[node name="NumBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -28.0
offset_top = -1.0
offset_right = 28.0
offset_bottom = 26.0
grow_horizontal = 2
theme_override_constants/separation = 4
alignment = 1

[node name="FactoryLabel" parent="NumBox" instance=ExtResource("4_ojxxd")]
layout_mode = 2

[node name="FactoryLabel2" parent="NumBox" instance=ExtResource("4_ojxxd")]
layout_mode = 2

[node name="FactoryLabel3" parent="NumBox" instance=ExtResource("4_ojxxd")]
layout_mode = 2

[node name="AmountLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -12.5
offset_top = -23.0
offset_right = 12.5
grow_horizontal = 2
grow_vertical = 0
text = "4/6"
horizontal_alignment = 1

[node name="BuildProgressBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -4.0
offset_right = 30.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_cii6y")
theme_override_styles/fill = SubResource("StyleBoxFlat_iw4a4")
value = 50.0
show_percentage = false

[node name="BuildingWrench" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -8.0
offset_right = 8.0
grow_vertical = 0
texture = SubResource("AnimatedTexture_lxcyl")
stretch_mode = 3
